[gd_scene load_steps=28 format=3 uid="uid://bh5a7fhvftxmm"]

[ext_resource type="Script" path="res://10_BOARD/Symbols/Book_symbols/Book_page_behaviour.gd" id="1_gx0mr"]
[ext_resource type="PackedScene" uid="uid://cgb4c1n0bj2at" path="res://12_INVENTORY/Book/Page_flip/page_flip_right.tscn" id="1_kxpxv"]
[ext_resource type="PackedScene" uid="uid://db6k1p6qd826g" path="res://10_BOARD/Symbols/Book_symbols/Page/Book_page.tscn" id="1_xf8in"]
[ext_resource type="Resource" uid="uid://bnr5ucr2s173m" path="res://10_BOARD/Symbols/Book_symbols/Symbols_book_data.tres" id="2_fid32"]

[sub_resource type="GDScript" id="GDScript_4sg0y"]
script/source = "extends Node

signal  _turn_page

"

[sub_resource type="BoxShape3D" id="BoxShape3D_224re"]
size = Vector3(2.69202, 0.19046, 2.289)

[sub_resource type="GDScript" id="GDScript_66qc2"]
script/source = "extends Node

signal	_turn_page
"

[sub_resource type="BoxMesh" id="BoxMesh_1p7be"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_axuf0"]
shading_mode = 0
albedo_color = Color(0.447059, 0.411765, 0.356863, 1)

[sub_resource type="VisualShaderNodeColorParameter" id="VisualShaderNodeColorParameter_0ehps"]
parameter_name = "Dark_color"

[sub_resource type="VisualShaderNodeColorParameter" id="VisualShaderNodeColorParameter_h7sjk"]
parameter_name = "light_color"
default_value = Color(0.401313, 0.399257, 0, 1)

[sub_resource type="VisualShaderNodeInput" id="VisualShaderNodeInput_bw4ej"]
input_name = "attenuation"

[sub_resource type="VisualShaderNodeFloatOp" id="VisualShaderNodeFloatOp_4t3on"]
default_input_values = [0, 0.0, 1, 1.0]
operator = 2

[sub_resource type="VisualShaderNodeVectorOp" id="VisualShaderNodeVectorOp_0nsk2"]
operator = 2

[sub_resource type="VisualShaderNodeMix" id="VisualShaderNodeMix_atliq"]
default_input_values = [0, Quaternion(0, 0, 0, 0), 1, Quaternion(0.125, 0.125, 0.125, 0.125), 2, Quaternion(0.5, 0.5, 0.5, 0.5)]
op_type = 5

[sub_resource type="VisualShaderNodeColorParameter" id="VisualShaderNodeColorParameter_dmc5f"]
parameter_name = "ColorParameter"
default_value_enabled = true
default_value = Color(0.027451, 0.14902, 0.156863, 1)

[sub_resource type="VisualShaderNodeFloatParameter" id="VisualShaderNodeFloatParameter_d36gc"]
parameter_name = "Dither_size"
qualifier = 1

[sub_resource type="VisualShaderNodeFloatConstant" id="VisualShaderNodeFloatConstant_bo2lt"]
constant = 1.156

[sub_resource type="VisualShaderNodeExpression" id="VisualShaderNodeExpression_tii4r"]
size = Vector2(724.789, 654.559)
expression = "const float DITHER_THRESHOLDS[16] ={
		1.0 / 17.0, 9.0 / 17.0, 3.0 / 17.0, 11.0 / 17.0,
		13.0 / 17.0, 5.0 / 17.0, 15.0 / 17.0, 7.0 / 17.0,
		4.0 / 17.0, 12.0 / 17.0, 2.0 / 17.0, 10.0 / 17.0,
		16.0 / 17.0, 8.0 / 17.0, 14.0 / 17.0, 6.0 / 17.0
	};
	
vec2 uv = FRAGCOORD.xy * Size;
int index = (int(uv.x) % 4) * 4 + int(uv.y) % 4;
Dither_Node = In - DITHER_THRESHOLDS[index];"

[sub_resource type="VisualShaderNodeStep" id="VisualShaderNodeStep_ktbwg"]

[sub_resource type="VisualShaderNodeInput" id="VisualShaderNodeInput_wjweo"]
input_name = "normal"

[sub_resource type="VisualShaderNodeDotProduct" id="VisualShaderNodeDotProduct_avrd6"]
default_input_values = [0, Vector3(0, 0, 0), 1, Vector3(1.325, 4.3, 2.415)]

[sub_resource type="VisualShaderNodeClamp" id="VisualShaderNodeClamp_crpg4"]

[sub_resource type="VisualShaderNodeInput" id="VisualShaderNodeInput_3n1t5"]
input_name = "light"

[sub_resource type="VisualShader" id="VisualShader_dxwuv"]
code = "shader_type spatial;
render_mode blend_mix, depth_draw_opaque, cull_back, diffuse_lambert, specular_schlick_ggx;

uniform vec4 Dark_color : source_color;
uniform vec4 ColorParameter : source_color = vec4(0.027451, 0.149020, 0.156863, 1.000000);
uniform vec4 light_color : source_color;
global uniform float Dither_size;



void fragment() {
// ColorParameter:2
	vec4 n_out2p0 = Dark_color;


// Output:0
	ALBEDO = vec3(n_out2p0.xyz);


}

void light() {
// ColorParameter:23
	vec4 n_out23p0 = ColorParameter;


// ColorParameter:13
	vec4 n_out13p0 = light_color;


// FloatConstant:3
	float n_out3p0 = 1.156000;


// FloatParameter:24
	float n_out24p0 = Dither_size;


	float n_out4p0;
// Expression:4
	n_out4p0 = 0.0;
	{
		const float DITHER_THRESHOLDS[16] ={
				1.0 / 17.0, 9.0 / 17.0, 3.0 / 17.0, 11.0 / 17.0,
				13.0 / 17.0, 5.0 / 17.0, 15.0 / 17.0, 7.0 / 17.0,
				4.0 / 17.0, 12.0 / 17.0, 2.0 / 17.0, 10.0 / 17.0,
				16.0 / 17.0, 8.0 / 17.0, 14.0 / 17.0, 6.0 / 17.0
			};
			
		vec2 uv = FRAGCOORD.xy * n_out24p0;
		int index = (int(uv.x) % 4) * 4 + int(uv.y) % 4;
		n_out4p0 = n_out3p0 - DITHER_THRESHOLDS[index];
	}


// Input:6
	vec3 n_out6p0 = NORMAL;


// Input:9
	vec3 n_out9p0 = LIGHT;


// DotProduct:7
	float n_out7p0 = dot(n_out6p0, n_out9p0);


// Clamp:8
	float n_in8p1 = 0.00000;
	float n_in8p2 = 1.00000;
	float n_out8p0 = clamp(n_out7p0, n_in8p1, n_in8p2);


// Input:15
	float n_out15p0 = ATTENUATION;


// FloatOp:16
	float n_in16p1 = 1.00000;
	float n_out16p0 = n_out15p0 * n_in16p1;


// VectorOp:17
	vec3 n_out17p0 = vec3(n_out8p0) * vec3(n_out16p0);


// Step:5
	float n_out5p0 = step(n_out4p0, n_out17p0.x);


// Mix:19
	vec4 n_out19p0 = mix(n_out23p0, n_out13p0, vec4(n_out5p0));


// Output:0
	SPECULAR_LIGHT = vec3(n_out19p0.xyz);


}
"
nodes/vertex/0/position = Vector2(400, 160)
nodes/fragment/2/node = SubResource("VisualShaderNodeColorParameter_0ehps")
nodes/fragment/2/position = Vector2(-20, 160)
nodes/fragment/connections = PackedInt32Array(2, 0, 0, 0)
nodes/light/0/position = Vector2(2440, 1640)
nodes/light/3/node = SubResource("VisualShaderNodeFloatConstant_bo2lt")
nodes/light/3/position = Vector2(-460, 1980)
nodes/light/4/node = SubResource("VisualShaderNodeExpression_tii4r")
nodes/light/4/position = Vector2(-180, 1980)
nodes/light/4/size = Vector2(724.789, 654.559)
nodes/light/4/input_ports = "0,0,In;1,0,Size;"
nodes/light/4/output_ports = "0,0,Dither_Node;"
nodes/light/4/expression = "const float DITHER_THRESHOLDS[16] ={
		1.0 / 17.0, 9.0 / 17.0, 3.0 / 17.0, 11.0 / 17.0,
		13.0 / 17.0, 5.0 / 17.0, 15.0 / 17.0, 7.0 / 17.0,
		4.0 / 17.0, 12.0 / 17.0, 2.0 / 17.0, 10.0 / 17.0,
		16.0 / 17.0, 8.0 / 17.0, 14.0 / 17.0, 6.0 / 17.0
	};
	
vec2 uv = FRAGCOORD.xy * Size;
int index = (int(uv.x) % 4) * 4 + int(uv.y) % 4;
Dither_Node = In - DITHER_THRESHOLDS[index];"
nodes/light/5/node = SubResource("VisualShaderNodeStep_ktbwg")
nodes/light/5/position = Vector2(720, 1500)
nodes/light/6/node = SubResource("VisualShaderNodeInput_wjweo")
nodes/light/6/position = Vector2(-1160, 1320)
nodes/light/7/node = SubResource("VisualShaderNodeDotProduct_avrd6")
nodes/light/7/position = Vector2(-740, 1440)
nodes/light/8/node = SubResource("VisualShaderNodeClamp_crpg4")
nodes/light/8/position = Vector2(-540, 1320)
nodes/light/9/node = SubResource("VisualShaderNodeInput_3n1t5")
nodes/light/9/position = Vector2(-1160, 1620)
nodes/light/13/node = SubResource("VisualShaderNodeColorParameter_h7sjk")
nodes/light/13/position = Vector2(1120, 1620)
nodes/light/15/node = SubResource("VisualShaderNodeInput_bw4ej")
nodes/light/15/position = Vector2(-300, 1420)
nodes/light/16/node = SubResource("VisualShaderNodeFloatOp_4t3on")
nodes/light/16/position = Vector2(80, 1400)
nodes/light/17/node = SubResource("VisualShaderNodeVectorOp_0nsk2")
nodes/light/17/position = Vector2(260, 1280)
nodes/light/19/node = SubResource("VisualShaderNodeMix_atliq")
nodes/light/19/position = Vector2(1560, 1360)
nodes/light/23/node = SubResource("VisualShaderNodeColorParameter_dmc5f")
nodes/light/23/position = Vector2(1140, 1180)
nodes/light/24/node = SubResource("VisualShaderNodeFloatParameter_d36gc")
nodes/light/24/position = Vector2(-820, 2140)
nodes/light/connections = PackedInt32Array(5, 0, 19, 2, 15, 0, 16, 0, 16, 0, 17, 1, 6, 0, 7, 0, 9, 0, 7, 1, 13, 0, 19, 1, 3, 0, 4, 0, 19, 0, 0, 1, 23, 0, 19, 0, 4, 0, 5, 0, 17, 0, 5, 1, 7, 0, 8, 0, 8, 0, 17, 0, 24, 0, 4, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8vj56"]
render_priority = 0
shader = SubResource("VisualShader_dxwuv")
shader_parameter/Dark_color = Color(0, 0, 0, 1)
shader_parameter/ColorParameter = Color(0.0196078, 0.121569, 0.129412, 1)
shader_parameter/light_color = Color(0.105882, 0.192157, 0.2, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_p4fuo"]
material = SubResource("ShaderMaterial_8vj56")
size = Vector2(1.21, 0.795)

[node name="Book" type="Node3D"]
transform = Transform3D(-2.72471e-09, 0, 0.0623341, 0, 0.0623341, 0, -0.0623341, 0, -2.72471e-09, 0, 0, 0)
script = ExtResource("1_gx0mr")
_book_data = ExtResource("2_fid32")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="Turn_Right" type="Area3D" parent="."]
transform = Transform3D(1, 2.91038e-11, -7.45058e-09, 1.45519e-11, 1, 3.54703e-11, -7.45058e-09, 3.72893e-11, 1, 0, 0, 0)

[node name="Turn_page" type="Node" parent="Turn_Right"]
script = SubResource("GDScript_4sg0y")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Turn_Right"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0249052, 0.0589447, -1.17724)
shape = SubResource("BoxShape3D_224re")

[node name="Turn_Left" type="Area3D" parent="."]

[node name="Turn_page" type="Node" parent="Turn_Left"]
script = SubResource("GDScript_66qc2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Turn_Left"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.113466, 0.0589447, 1.10359)
shape = SubResource("BoxShape3D_224re")

[node name="Book_page" parent="." instance=ExtResource("1_xf8in")]
transform = Transform3D(-1.83661e-08, 0, 0.420167, 0, 0.420167, 0, -0.420167, 0, -1.83661e-08, -0.100565, 0.101, -0.0851562)

[node name="Page_flip_right" parent="." instance=ExtResource("1_kxpxv")]
transform = Transform3D(1, 1.81899e-12, -1.49012e-08, -9.09496e-11, 1, -2.54659e-11, 1.49012e-08, 4.61569e-11, 1, -0.0474081, 0.0945962, -0.00430293)

[node name="Page_flip_left" parent="." instance=ExtResource("1_kxpxv")]
transform = Transform3D(1, 0, 5.96046e-08, 0, 0.999999, 0, 5.96046e-08, 0, -1, -0.0474076, 0.0945962, -0.0263789)

[node name="book_page" type="MeshInstance3D" parent="."]
transform = Transform3D(2.67039, 0, 1.7053e-13, 0, 0.078953, 0, 0, 0, 4.63623, -0.104716, 0.0503313, -0.0783752)
layers = 2
mesh = SubResource("BoxMesh_1p7be")
surface_material_override/0 = SubResource("StandardMaterial3D_axuf0")

[node name="book_base" type="MeshInstance3D" parent="."]
transform = Transform3D(0.000976682, 0, -3.54225, 0, 9.34066, 0, 4.00592, 0, 0.000864863, -0.133353, 0.00743847, -0.0563836)
layers = 2
mesh = SubResource("PlaneMesh_p4fuo")
skeleton = NodePath("../../..")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="_turn_page" from="Turn_Right/Turn_page" to="." method="_turn_page_right"]
[connection signal="_turn_page" from="Turn_Left/Turn_page" to="." method="turn_page_left"]
